--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "npm run build && surge -p .",
     "export": "spectacle-renderer --delay 3000",
     "lint": "eslint --ext .js,.jsx .",
-    "start": "cross-env NODE_ENV=development node server.js"
+    "start": "cross-env NODE_ENV=development node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Formidable Labs <hello@formidable.com> (https://formidable.com)",
   "license": "MIT",
@@ -52,6 +53,7 @@
     "is-buffer": "^2.0.3",
     "markdown-loader": "^4.0.0",
     "node-libs-browser": "^2.1.0",
+    "nodemon": "^2.0.5",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^4.12.8",
     "react-transform-catch-errors": "^1.0.2",
